# ai-algorithms

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: air_quality.csv
include/model/: LinearRegression.h
include/optimizer/: GradientDescent.h  Optimizer.h
include/utils/: CSVReader.h  Loss.h
regression/: GradientDescent.cpp  GradientDescent.h  LinearRegression.cpp  LinearRegression.h  Optimizer.h  main.cpp
src/model/: LinearRegression.cpp
src/optimizer/: GradientDescent.cpp
src/utils/: CSVReader.cpp  Loss.cpp
utils/: CSVReader.cpp  CSVReader.h  Loss.cpp  Loss.h
